<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment2">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".SecondFragment">

            <TextView
                android:id="@+id/third_activity_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                android:text="@string/second_activity"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <Button
                android:id="@+id/bnToFirst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/third_activity_name"

                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:layout_marginTop="150dp"
                android:text="@string/to_first"
                android:textSize="20sp" />

            <Button
                android:id="@+id/bnToThird"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bnToFirst"

                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:layout_marginTop="80dp"
                android:text="@string/to_third"
                android:textSize="20sp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>
